add third testing window

--- a/pixel_count/Detect Circles.ipynb
+++ b/pixel_count/Detect Circles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -140,6 +140,7 @@
      "text": [
       "green [[[ 60 255 255]]]\n",
       "red [[[  0 255 255]]]\n",
+      "red2 [[[120 228 190]]]\n",
       "blue [[[120 255 255]]]\n",
       "yellow [[[ 30 255 255]]]\n"
      ]
@@ -153,6 +154,10 @@
     "red=np.uint8([[[0,0,255]]])\n",
     "hsv_red=cv2.cvtColor(red,cv2.COLOR_BGR2HSV)\n",
     "print 'red', hsv_red\n",
+    "\n",
+    "red2=np.uint8([[[190, 20, 20]]])\n",
+    "hsv_red2=cv2.cvtColor(red2, cv2.COLOR_BGR2HSV)\n",
+    "print 'red2', hsv_red2\n",
     "\n",
     "blue=np.uint8([[[255,0,0]]])\n",
     "hsv_blue=cv2.cvtColor(blue, cv2.COLOR_BGR2HSV)\n",
