--- a/Live_red-green.ipynb
+++ b/Live_red-green.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -27,34 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-50 -10 -10] [ 70 255 255]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Adjustment sliders for color range\n",
     "cv2.namedWindow('red')\n",
     "#max and min red HSV values (Hue, Saturation Value)\n",
-    "minHRed=0\n",
-    "maxHRed=30\n",
+    "#For typical red objects the hue should be between 155 and 185.  \n",
+    "#Glowsticks will probably need some modifications and testing\n",
+    "minHRed=155\n",
+    "maxHRed=185\n",
     "minSRed=0\n",
     "maxSRed=255\n",
     "minVRed=0\n",
     "maxVRed=255\n",
     "#default values\n",
-    "lowerHRedDefault=0\n",
-    "upperHRedDefault=10\n",
+    "lowerHRedDefault=160\n",
+    "upperHRedDefault=180\n",
     "# define color ranges in HSV\n",
-    "lower_red = np.array([lowerHRedDefault, minSRed, minVRed])\n",
+    "lower_red = np.array([lowerHRedDefault*-1, minSRed, minVRed])\n",
     "upper_red = np.array([upperHRedDefault, maxSRed, maxVRed]) \n",
     "\n",
     "\n",
@@ -80,7 +74,6 @@
     "# FIXME multiply by -1 to set initial values; this needs a better solution\n",
     "lower_green = np.array([lowerHGreenDefault*-1, minSGreen*-1, minVGreen*-1])\n",
     "upper_green = np.array([upperHGreenDefault, maxSGreen, maxVGreen]) \n",
-    "print lower_green, upper_green\n",
     "\n",
     "# create trackbars \n",
     "cv2.createTrackbar('Hue_Upper', 'green', upper_green[0], abs(maxHGreen-minHGreen), adjust)\n",
@@ -91,6 +84,31 @@
     "cv2.createTrackbar('Val_Lower', 'green', lower_green[2], abs(maxVGreen-minVGreen), adjust)\n",
     "\n",
     "\n",
+    "cv2.namedWindow('testing')\n",
+    "minHTesting=0\n",
+    "maxHTesting=255\n",
+    "minSTesting=0\n",
+    "maxSTesting=255\n",
+    "minVTesting=0\n",
+    "maxVTesting=255\n",
+    "#default values\n",
+    "lowerHTestingDefault=0\n",
+    "upperHTestingDefault=255\n",
+    "# define color ranges in HSV\n",
+    "\n",
+    "lower_testing = np.array([lowerHTestingDefault, minSGreen, minVGreen])\n",
+    "upper_testing = np.array([upperHTestingDefault, maxSGreen, maxVGreen]) \n",
+    "\n",
+    "\n",
+    "# create trackbars \n",
+    "cv2.createTrackbar('Hue_Upper', 'testing', upper_testing[0], abs(maxHTesting-minHTesting), adjust)\n",
+    "cv2.createTrackbar('Hue_Lower', 'testing', lower_testing[0], abs(maxHTesting-minHTesting), adjust)\n",
+    "cv2.createTrackbar('Sat_Upper', 'testing', upper_testing[1], abs(maxSTesting-minSTesting), adjust)\n",
+    "cv2.createTrackbar('Sat_Lower', 'testing', lower_testing[1], abs(maxSTesting-minSTesting), adjust)\n",
+    "cv2.createTrackbar('Val_Upper', 'testing', upper_testing[2], abs(maxVTesting-minVTesting), adjust)\n",
+    "cv2.createTrackbar('Val_Lower', 'testing', lower_testing[2], abs(maxVTesting-minVTesting), adjust)\n",
+    "\n",
+    "\n",
     "#minHGreen=50 \n",
     "#cv2.createTrackbar('lower_green_adjust', 'green', lower_green[0], 79, adjust)\n",
     "#cv2.createTrackbar('upper_green_adjust', 'green', upper_green[0], 79, adjust)"
@@ -98,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +127,7 @@
        "-1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,9 +146,10 @@
     "\n",
     "    # Threshold the selected HSV colors\n",
     "    mask_red = cv2.inRange(hsv, lower_red, upper_red)\n",
-    "    \n",
-    "    \n",
+    "      \n",
     "    mask_green = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "    \n",
+    "    mask_testing = cv2.inRange(hsv, lower_testing, upper_testing)\n",
     "\n",
     "    # Bitwise-AND mask and original image\n",
     "    ratio='Red:Green '+str(cv2.countNonZero(mask_red))+\":\"+str(cv2.countNonZero(mask_green))\n",
@@ -139,6 +158,7 @@
     "    #calculate the resulting image - this may be much slower than just dealing with the masks consider reverting\n",
     "    res_red=cv2.bitwise_and(frame, frame, mask=mask_red)\n",
     "    res_green=cv2.bitwise_and(frame, frame, mask=mask_green)\n",
+    "    res_testing=cv2.bitwise_and(frame, frame, mask=mask_testing)\n",
     "    \n",
     "    # add red:green ratio to window\n",
     "    cv2.putText(frame, ratio, (10,50), cv2.FONT_HERSHEY_PLAIN, 2, (0, 0, 0), 2 )\n",
@@ -148,23 +168,25 @@
     "    # all text additions need to be made AFTER measurements have been taken!\n",
     "    # add adjustment slider values to window\n",
     "    cv2.putText(res_red, \"Low:\"+str(lower_red), (10,50), cv2.FONT_HERSHEY_PLAIN, 2, (255,255,255), 2 )\n",
-    "    cv2.putText(res_red, \"Up: \"+str(upper_red), (10, 100), cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)\n",
-    "\n",
-    "    #cv2.putText(mask_green, str(lower_green), (10,50), cv2.FONT_HERSHEY_PLAIN, 2, (255,255,255), 2 )\n",
-    "    #cv2.putText(mask_green, str(upper_green), (10, 100), cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)\n",
+    "    cv2.putText(res_red, \"Up: \"+str(upper_red), (10, 100), cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)    \n",
+    "    \n",
     "    cv2.putText(res_green, \"Low:\"+str(lower_green), (10,50), cv2.FONT_HERSHEY_PLAIN, 2, (255,255,255), 2 )\n",
     "    cv2.putText(res_green, \"Up: \"+str(upper_green), (10, 100), cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)\n",
+    "    \n",
+    "    cv2.putText(res_testing, \"Low:\"+str(lower_testing), (10,50), cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)\n",
+    "    cv2.putText(res_testing, \"Up: \"+str(upper_testing), (10, 100), cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)\n",
     "\n",
+    "    \n",
+    "    \n",
     "    #live image      \n",
     "    cv2.imshow('live',frame)\n",
     "    \n",
-    "    #cv2.imshow('red',mask_red)\n",
     "    cv2.imshow('red', res_red)\n",
-    "    \n",
-    "    #cv2.imshow('green', mask_green )\n",
+    "  \n",
     "    cv2.imshow('green', res_green)\n",
-    "    #cv2.imshow('result_green', res_green)\n",
-    "    \n",
+    "\n",
+    "    cv2.imshow('testing', res_testing)\n",
+    "\n",
     "    #read and adjust values from sliders\n",
     "    \n",
     "    lower_red[0]=minHRed+cv2.getTrackbarPos('Hue_Lower', 'red')\n",
@@ -182,13 +204,16 @@
     "    upper_green[1]=minSGreen+cv2.getTrackbarPos('Sat_Upper', 'green')\n",
     "    lower_green[2]=minVGreen+cv2.getTrackbarPos('Val_Lower', 'green')\n",
     "    upper_green[2]=minVGreen+cv2.getTrackbarPos('Val_Upper', 'green')\n",
-    "    #lower_green[0]=cv2.getTrackbarPos('lower_green_adjust', 'green')\n",
-    "    #upper_green[0]=cv2.getTrackbarPos('upper_green_adjust', 'green')\n",
-    "   \n",
-    "     \n",
-    "    #cv2.imshow('res',res)\n",
-    "      \n",
     "\n",
+    "    #wide open range for testing\n",
+    "    lower_testing[0]=minHTesting+cv2.getTrackbarPos('Hue_Lower', 'testing')\n",
+    "    upper_testing[0]=minHTesting+cv2.getTrackbarPos('Hue_Upper', 'testing')\n",
+    "    lower_testing[1]=minSTesting+cv2.getTrackbarPos('Sat_Lower', 'testing')\n",
+    "    upper_testing[1]=minSTesting+cv2.getTrackbarPos('Sat_Upper', 'testing')\n",
+    "    lower_testing[2]=minVTesting+cv2.getTrackbarPos('Val_Lower', 'testing')\n",
+    "    upper_testing[2]=minVTesting+cv2.getTrackbarPos('Val_Upper', 'testing')\n",
+    "\n",
+    "    \n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "        \n",
